z-index fixed for publication, about and timeline

--- a/styling/about.css
+++ b/styling/about.css
@@ -54,6 +54,9 @@ body{
         height: 100%;
         z-index: 997; 
     }
+    .topbar-artists-open{
+        z-index: 999;
+    }
 }
 
 @media only screen and (max-width: 1350px)  {
